# feynman

./: .gitignore  INSTALL.md  README.md  feynman.sublime-project  genint.py  setup-external-posix.sh  setup.py
examples/: common.py  gsl_integration.py  integration.py  ocl_integration.py
examples/c-integration/: CMakeLists.txt  main.c  main.cpp
examples/c-integration/cmake/: Feynman.cmake
examples/cpp-integration/: CMakeLists.txt  main.cpp
examples/opencl-query/: CMakeLists.txt  iuncl.c  iuncl.h  main.c
examples/share/: integrand.c  integrand.h  integrands.c  integrands.h
feynman/: __init__.py  common.py  integration.py  opencl.py  parsing.py
feynman/templates/: GslBaseMonteCarlo.cpp  GslBaseMonteCarlo.h  GslMiserMonteCarlo.cpp  GslMonteCarlo.cpp  GslMonteCarlo.h  GslPlainMonteCarlo.cpp  GslVegasMonteCarlo.cpp  OpenClMiserMonteCarlo.cl  OpenClMonteCarlo.cpp  OpenClMonteCarlo.h  OpenClMonteCarloFixes.cl  OpenClMonteCarloInitialization.cl  OpenClPlainMonteCarlo.cl  OpenClVegasMonteCarlo.cl  gsl_base_monte_carlo.c  gsl_miser_monte_carlo.c  gsl_plain_monte_carlo.c  gsl_plain_monte_carlo.h  gsl_vegas_monte_carlo.c  ranluxcl.cl
share/: sample_integrands.cpp
test/: common.py  testintegration.py  testopencl.py  testparsing.py
test/resources/: parsing_test_code.cl  parsing_test_code.h  parsing_test_validation.json
testing/: common.py  testcommon.py  testintegration.py  testopencl.py  testparsing.py
testing/resources/: parsing_test_code.cl  parsing_test_code.h  parsing_test_validation.json
