#Set the minimum CMake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

#Create the project
PROJECT(FeynmanCIntegrationExample)

#Add some custom CMake extensions
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)

#Find GSL
FIND_PACKAGE(GSL)
IF(GSL_FOUND)
    ADD_DEFINITIONS(-DHAVE_GSL)
    INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
    SET(LINK_LIBRARIES ${LINK_LIBRARIES} ${GSL_LIBRARIES})
ENDIF(GSL_FOUND)

#Find OpenCL
FIND_PACKAGE(OpenCL)
IF(OPENCL_FOUND)
    ADD_DEFINITIONS(-DHAVE_OPENCL)
    INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})
    SET(LINK_LIBRARIES ${LINK_LIBRARIES} ${OPENCL_LIBRARIES})
ENDIF(OPENCL_FOUND)

#Add main executable
ADD_EXECUTABLE(integrate main.c)

#Set up linking
TARGET_LINK_LIBRARIES(integrate 
                      ${LINK_LIBRARIES})
